<resources>
    <string name="app_name">QAadhar</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string name="name">Name</string>
    <string name="care">Care Of</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="saved_aadhars">Saved Aadhars</string>


</resources>