<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="aadhar"
            type="bans.qaadhar.models.AadharCard" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/name"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.name}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/care"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.careOf}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/gender"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.gender}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/dob"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.dateOfBirth}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/address"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.address}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/phone"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.mobile}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ageo_bold"
                android:gravity="center|end"
                android:letterSpacing=".02"
                android:padding="10dp"
                android:layout_weight=".35"
                android:text="@string/email"
                android:textColor="@color/default_primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C6C6C6" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".65"
                android:enabled="false"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@{aadhar.email}"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAadharNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:padding="10dp"
            android:text="@{aadhar.uuid}"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>
